Installer, JDChat, Config: removed flags DownloadLink,PluginForHost: moved correctDownloadLink to DownloadLink constructor HostingcupCom: hoster added, thx to yama_kawa_umi FindBugs, round 4 , more to come
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7335 ebf7c1c2-ba36-0410-9fe8-c592906822b4